--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,10 +33,10 @@
   },
   "exclude": [
     "node_modules",
-    "dist",
-    "test"
+    "dist"
   ],
   "include": [
-    "src"
+    "src",
+    "test"
   ]
 }
