--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^8.2.1",
+    "@types/jest": "^29.4.0",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "benchmark": "^2.1.4",
@@ -66,9 +67,9 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^3.4.1",
     "husky": "^6.0.0",
-    "jest": "^26.6.3",
-    "jest-cli": "^26.6.3",
-    "jest-config": "^26.6.3",
+    "jest": "^29.5.0",
+    "jest-cli": "^29.5.0",
+    "jest-config": "^29.5.0",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.0",
     "prettier-eslint": "^12.0.0",
@@ -77,8 +78,8 @@
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-typescript2": "^0.34.1",
     "shelljs": "^0.8.4",
-    "ts-jest": "^26.5.6",
-    "ts-node": "^9.1.1",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "^4.3.2"
   }
 }
