[node] Cleaned up package.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,10 +33,10 @@
   },
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "test"
   ],
   "include": [
     "src",
-    "test"
   ]
 }
