--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "@typescript-eslint/parser": "^4.26.0",
     "benchmark": "^2.1.4",
     "clean-publish": "^3.4.5",
-    "coveralls": "^3.1.0",
+    "coveralls-next": "^4.2.0",
     "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^3.4.1",
