--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
     - name: 📚 checkout
       uses: actions/checkout@v3
+      with:
+        submodules: 'true'
     - name: 🟢 node ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
