--- a/package.json
+++ b/package.json
@@ -79,5 +79,8 @@
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.3.2"
+  },
+  "dependencies": {
+    "@springcomp/iregexp": "^0.3.3"
   }
 }
