--- a/.editorconfig
+++ b/.editorconfig
@@ -12,7 +12,7 @@ indent_size = 2
 indent_style = space
 insert_final_newline = true
 # editorconfig-tools is unable to ignore longs strings or urls
-max_line_length = null
+max_line_length = off
 trim_trailing_whitespace = true
 
 [*.md]
