perf(scripts): improve performance benchmarking accuracy
- Replaces deprecated [benchmark](https://github.com/bestiejs/benchmark.js) with [tinybench](https://github.com/tinylibs/tinybench)
- Updates `scripts/perf.js` to use tinybench
- Enforces warm-up and garbage collection (gc between runs may not be needed, but it should minimize interference)

```shell
npm run perf

> @jmespath-community/jmespath@1.1.4 perf
> node --expose-gc scripts/perf.js

┌─────────┬─────────────────────────────────┬──────────────┬────────────────────┬──────────┬──────────┐
│ (index) │ Task Name                       │ ops/sec      │ Average Time (ns)  │ Margin   │ Samples  │
├─────────┼─────────────────────────────────┼──────────────┼────────────────────┼──────────┼──────────┤
│ 0       │ 'Parser#single_expr'            │ '14,010,279' │ 71.37616207528444  │ '±0.74%' │ 14010280 │
│ 1       │ 'Parser#single_subexpr'         │ '7,064,237'  │ 141.55808538731404 │ '±0.06%' │ 7064238  │
│ 2       │ 'Parser#deeply_nested_50'       │ '340,225'    │ 2939.2295062691283 │ '±0.57%' │ 340226   │
│ 3       │ 'Parser#deeply_nested_50_index' │ '196,826'    │ 5080.625386760879  │ '±0.52%' │ 196827   │
│ 4       │ 'Parser#basic_list_projection'  │ '3,958,033'  │ 252.6507331664748  │ '±0.61%' │ 3958034  │
└─────────┴─────────────────────────────────┴──────────────┴────────────────────┴──────────┴──────────┘
```

<!-- ps-id: 5d145054-8cd2-42df-abf6-bd252e64d9ee -->

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "lint:fix": "npm run lint -- --fix",
     "prebuild": "npx rimraf dist",
     "build": "npx tsc --outDir dist/lib -d --module commonjs && npx rollup -c rollup.config.ts",
-    "perf": "node scripts/perf.js",
+    "perf": "node --expose-gc scripts/perf.js",
     "start": "npx rollup -c rollup.config.ts -w",
     "test": "npx jest --coverage",
     "test:watch": "npx jest --coverage --watch",
@@ -59,7 +59,6 @@
     "@types/jest": "^29.4.0",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
-    "benchmark": "^2.1.4",
     "clean-publish": "^3.4.5",
     "coveralls-next": "^4.2.0",
     "eslint": "^7.27.0",
@@ -76,6 +75,7 @@
     "rollup": "^2.50.5",
     "rollup-plugin-typescript2": "^0.34.1",
     "shelljs": "^0.8.4",
+    "tinybench": "^2.5.1",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.3.2"
