--- a/package.json
+++ b/package.json
@@ -43,9 +43,10 @@
     "build": "npx tsc --outDir dist/lib -d --module commonjs && npx rollup -c rollup.config.ts",
     "perf": "node --expose-gc scripts/perf.js",
     "start": "npx rollup -c rollup.config.ts -w",
-    "test": "npx jest --coverage",
-    "test:watch": "npx jest --coverage --watch",
-    "test:prod": "npm run lint && npm run test -- --no-cache",
+    "test": "vitest --run",
+    "test:watch": "vitest",
+    "test:prod": "npm run lint && npm run test",
+    "coverage": "vitest run --coverage",
     "deploy-docs": "ts-node scripts/gh-pages-publish",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "precommit": "lint-staged",
@@ -56,7 +57,6 @@
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^8.2.1",
-    "@types/jest": "^29.4.0",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "clean-publish": "^3.4.5",
@@ -65,9 +65,6 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^3.4.1",
     "husky": "^6.0.0",
-    "jest": "^29.5.0",
-    "jest-cli": "^29.5.0",
-    "jest-config": "^29.5.0",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.0",
     "prettier-eslint": "^12.0.0",
@@ -76,8 +73,8 @@
     "rollup-plugin-typescript2": "^0.34.1",
     "shelljs": "^0.8.4",
     "tinybench": "^2.5.1",
-    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "vitest": "^2.1.8"
   }
 }
