--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -10,8 +10,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
 
     strategy:
@@ -23,11 +22,26 @@ jobs:
       uses: actions/checkout@v3
       with:
         submodules: 'true'
+
     - name: 🟢 node ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install
-    - run: npm run build --if-present
-    - name: ☢ tests
-      run: npm test
+
+    - name: 📦 Install dependencies
+      run: npm install
+
+    - name: 🏗️ Build
+      run: npm run build --if-present
+
+    - name: ☢ Run tests with coverage
+      run: npm run coverage
+
+    - name: 📊 Upload coverage reports
+      if: matrix.node-version == '20.x'  # only upload coverage for one Node version
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-report
+        path: coverage/
+        retention-days: 30
+        if-no-files-found: error
