--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@rollup/plugin-typescript": "^8.2.1",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
+    "@vitest/coverage-v8": "^2.1.8",
     "clean-publish": "^3.4.5",
     "coveralls-next": "^4.2.0",
     "eslint": "^7.27.0",
