chore: migrate to biome for linting and formatting
-   Removed ESLint and Prettier configuration files (.eslintignore, .eslintrc.js, .prettierignore, .prettierrc.js).
-   Added Biome configuration file (biome.json).
-   Updated the linting and formatting scripts in package.json to use Biome.
-   Removed eslint and prettier dependencies
-   Added .npmrc file to pin node version

<!-- ps-id: 4b685c3e-4a8c-4497-a5cc-312467276d06 -->

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,3 @@
 {
-  "**/{src,test}/**/*.{ts,js}": [
-    "prettier --write",
-    "git add"
-  ]
+  "**/{src,test}/**/*.{ts,js}": ["biome check --write", "git add"]
 }
