--- a/package.json
+++ b/package.json
@@ -11,22 +11,13 @@
   "module": "dist/jmespath.esm.js",
   "typings": "dist/types/index.d.ts",
   "types": "dist/types/index.d.ts",
-  "files": [
-    "dist/"
-  ],
+  "files": ["dist/"],
   "homepage": "https://github.com/nanoporetech/jmespath-ts#readme",
   "bugs": {
     "url": "https://github.com/nanoporetech/jmespath-ts/issues",
     "mail": ""
   },
-  "keywords": [
-    "jmespath",
-    "jsonpath",
-    "query",
-    "json",
-    "jq",
-    "xpath"
-  ],
+  "keywords": ["jmespath", "jsonpath", "query", "json", "jq", "xpath"],
   "contributors": [],
   "repository": {
     "type": "git",
@@ -37,8 +28,9 @@
     "node": ">=14.0.0"
   },
   "scripts": {
-    "lint": "npx eslint --ignore-path .eslintignore './{src,test}/**/*.{js,ts}'",
-    "lint:fix": "npm run lint -- --fix",
+    "lint": "biome check",
+    "lint:fix": "biome check --write",
+    "lint:ci": "biome check --diagnostic-level=error",
     "prebuild": "npx rimraf dist",
     "build": "npx tsc --outDir dist/lib -d --module commonjs && npx rollup -c rollup.config.ts",
     "perf": "node --expose-gc scripts/perf.js",
@@ -53,22 +45,16 @@
     "prepack": "npx clear-package-json package.json --output ./package.json"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^8.2.1",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
     "@vitest/coverage-v8": "^3.0.8",
     "clean-publish": "^3.4.5",
     "coveralls-next": "^4.2.0",
-    "eslint": "^7.27.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^3.4.1",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
-    "prettier": "^2.3.0",
-    "prettier-eslint": "^12.0.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.50.5",
     "rollup-plugin-typescript2": "^0.34.1",
