--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,7 @@
     "declarationDir": "dist/types",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": [
-      "es2020",
-      "dom"
-    ],
+    "lib": ["es2020", "dom"],
     "moduleResolution": "node",
     "module": "esnext",
     "isolatedModules": true,
@@ -27,16 +24,8 @@
     "strict": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "typeRoots": [
-      "node_modules/@types"
-    ]
+    "typeRoots": ["node_modules/@types"]
   },
-  "exclude": [
-    "node_modules",
-    "dist",
-    "test"
-  ],
-  "include": [
-    "src",
-  ]
+  "exclude": ["node_modules", "dist", "test"],
+  "include": ["src"]
 }
