--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "main": "dist/jmespath.umd.js",
   "bin": {
-    "jp": "dist/lib/scripts/jp.js"
+    "jp": "dist/lib/bin/jp.js"
   },
   "module": "dist/jmespath.esm.js",
   "typings": "dist/types/index.d.ts",
