--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "url": "https://jmespath.site"
   },
   "main": "dist/jmespath.umd.js",
+  "bin": {
+    "jp": "dist/lib/bin/jp.js"
+  },
   "module": "dist/jmespath.esm.js",
   "typings": "dist/types/index.d.ts",
   "types": "dist/types/index.d.ts",
