--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -40,6 +40,9 @@ jobs:
     - name: ☢ Run tests with coverage
       run: npm run coverage
 
+    - name: 🧪 Test build artifacts
+      run: npm test -- test/build-artifacts.spec.ts
+
     - name: 📊 Upload coverage reports
       if: matrix.node-version == '20.x'  # only upload coverage for one Node version
       uses: actions/upload-artifact@v4
