--- a/tsconfig.bin.json
+++ b/tsconfig.bin.json
@@ -3,17 +3,17 @@
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "allowUnreachableCode": false,
-    "declaration": true,
-    "declarationDir": "dist/types",
+    "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": ["es2020", "dom"],
     "moduleResolution": "node",
-    "module": "esnext",
+    "module": "commonjs",
     "isolatedModules": true,
     "esModuleInterop": true,
     "target": "es6",
-    "rootDir": "src",
+    "rootDir": ".",
+    "outDir": "dist/lib",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitAny": true,
@@ -26,6 +26,6 @@
     "strictNullChecks": true,
     "typeRoots": ["node_modules/@types"]
   },
-  "exclude": ["node_modules", "dist", "test"],
-  "include": ["src"]
+  "include": ["bin/**/*"],
+  "exclude": ["node_modules", "dist", "test", "src"]
 }
