build: fix cli build / modernize
<!-- ps-id: d669b3d0-e0e6-4462-8e45-666751095542 -->

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,11 +39,15 @@ jobs:
       - run: npm run build
       - name: 🔍 Validate build artifacts
         run: |
-          test -f dist/jmespath.umd.js || (echo "Missing UMD bundle" && exit 1)
-          test -f dist/jmespath.esm.js || (echo "Missing ESM bundle" && exit 1)
-          test -f dist/types/index.d.ts || (echo "Missing TypeScript declarations" && exit 1)
-          test -f dist/lib/bin/jp.js || (echo "Missing CLI binary" && exit 1)
-          head -1 dist/lib/bin/jp.js | grep -q "^#!" || (echo "CLI binary missing shebang" && exit 1)
+          test -f dist/index.umd.js || (echo "Missing UMD bundle" && exit 1)
+          test -f dist/index.umd.min.js || (echo "Missing minified UMD bundle" && exit 1)
+          test -f dist/index.esm.js || (echo "Missing browser ESM bundle" && exit 1)
+          test -f dist/index.esm.min.js || (echo "Missing minified browser ESM bundle" && exit 1)
+          test -f dist/index.cjs || (echo "Missing Node.js CommonJS bundle" && exit 1)
+          test -f dist/index.mjs || (echo "Missing Node.js ESM bundle" && exit 1)
+          test -f dist/index.d.ts || (echo "Missing TypeScript declarations" && exit 1)
+          test -f dist/cli.mjs || (echo "Missing CLI binary" && exit 1)
+          head -1 dist/cli.mjs | grep -q "^#!" || (echo "CLI binary missing shebang" && exit 1)
           echo "✅ All build artifacts validated"
       - name: 🧪 Test build artifacts
         run: npm test -- test/build-artifacts.spec.ts
