--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,5 +1,7 @@
 permissions:
+  id-token: write  # Required for OIDC
   contents: read
+
 name: 🚀 release
 
 on:
@@ -53,5 +55,3 @@ jobs:
         run: npm test -- test/build-artifacts.spec.ts
       - name: ✉️ publish
         run: npm publish --verbose --access public --tag latest
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
